hard-gists/ea46edc315b0f94d03b9/run.log
=== Docker Run Log for ea46edc315b0f94d03b9 ===
Started at: Mi 29. Okt 20:51:36 CET 2025

[2025-10-29 20:51:37] START: Running container for ea46edc315b0f94d03b9
[2025-10-29 20:51:37] SUCCESS: Container a32354f6d126d4b6ec5a55524d5b78d050da1bcea88524efe4231bd2ec08c64a started for ea46edc315b0f94d03b9
=== Container logs for ea46edc315b0f94d03b9 ===
  File "/snippet.py", line 32
    print "{0:50} Score: {1}".format(item[0], item[1])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ea46edc315b0f94d03b9 ===
[2025-10-29 20:51:39] INFO: Container a32354f6d126d4b6ec5a55524d5b78d050da1bcea88524efe4231bd2ec08c64a has stopped
